--- a/css/style.css
+++ b/css/style.css
@@ -6,3 +6,13 @@ body {
 	font-size: 24px;
 	color: red;
 }
+
+.scorediv {
+	display: inline-block;
+	margin-top: 15px;
+}
+
+#score-list {
+	list-style: none;
+	padding: 0;
+}
